<resources>
    <string name="app_name">智能仓储</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="property">© 版权所有：正业玖坤</string>
    <string name="user_log_tip">用户登录</string>
    <string name="login_login">立即登录</string>
    <string name="login_inpiut_psw">请输入密码</string>
    <string name="login_input_username">请输入用户名</string>
    <string name="login_choose_servers">请选择服务器</string>
    <string name="login_app_name">智能仓库管理系统</string>
    <string name="login_remember_psw">记录密码</string>
    <string name="login_version">V %1$s</string>
    <string name="login_success">登录成功</string>
    <string name="language_simple">简体</string>
    <string name="language_tradtional">繁体</string>
    <string name="language_english">英文</string>
    <string name="login_select_language">请选择语言</string>
    <string name="login_success_tip">提示：首次登录需进行个人信息确认，如有问题，请到ERP中进行修改。</string>
    <string name="name">姓名：%1$s</string>
    <string name="sex">性别：%1$s</string>
    <string name="work_num">工号：%1$s</string>
    <string name="depart">部门：%1$s</string>
    <string name="tel">手机：%1$s</string>
    <string name="confirm">确定</string>
    <string name="home">首页</string>
    <string name="home_in_lib">入库作业</string>
    <string name="home_out_lib">出库作业</string>
    <string name="home_today_in">今日入库</string>
    <string name="home_today_out">今日出库</string>
    <string name="home_detail">查看详情</string>
    <string name="home_query">综合查询</string>
    <string name="home_lib_in_deal">库内作业</string>
    <string name="home_quilty">质量作业</string>
    <string name="home_set">设置</string>
    <string name="home_title">智能仓储</string>
    <string name="home_mine">我的</string>
    <string name="stock_in_receive_pro">收货</string>
    <string name="stock_in">入库</string>
    <string name="stock_in_other_iblib_check">其他入库(审核)</string>
    <string name="stock_in_othre_inlib_create_order">其他入库(制单)</string>
    <string name="stock_in_come_pro_in">来料入库</string>
    <string name="stock_in_check">产成品(审核)</string>
    <string name="stock_in_create_order">产成品(制单)</string>
    <string name="stock_in_buy_order">采购单</string>
    <string name="stock_in_send_order">送货单</string>
    <string name="stock_in_return_pro">退料</string>
    <string name="stock_in_out_return">委外退料</string>
    <string name="stock_in_produce_return">生产退料</string>
    <string name="stock_in_sale_return">销售退货</string>
    <string name="scan_allcode_title">二维码或条形码扫描</string>
    <string name="scan_barcode_hint">将条形码对入取景框，即可自动扫描</string>
    <string name="scan_qrcode_hint">将二维码对入取景框，即可自动扫描</string>
    <string name="scan_allcode_hint">将二维码或条形码对入取景框，即可自动扫描</string>
    <string name="scan_barcode_title">条形码扫描</string>
    <string name="scan_qrcode_title">二维码扫描</string>
    <string name="scan_point_title">此采购订单系统中未找到，请确认后，再进行查询！</string>
    <string name="stock_out_out_add_materail">委外补料</string>
    <string name="stock_out_out_check">委外发料</string>
    <string name="stock_out_out_create_order">委外发料</string>
    <string name="stock_out_create">生产</string>
    <string name="stock_out_out">委外</string>
    <string name="stock_out_create_add_materail">生产补料</string>
    <string name="stock_out_create_check">生产领料</string>
    <string name="stock_out_create_create_order">生产领料</string>
    <string name="stock_out_sale">销售</string>
    <string name="stock_out_sale_trans">调拨出库</string>
    <string name="stock_out_sale_check">销售出库</string>
    <string name="stock_out_sale_create_order">销售出库</string>
    <string name="stock_out_other">其他</string>
    <string name="stock_out_other_buy_return">采购退料</string>
    <string name="stock_out_other_check">其他出库</string>
    <string name="stock_out_other_create_order">其他出库</string>
    <string name="query_repertory">库存查询</string>
    <string name="tv_query_todayin">今日入库</string>
    <string name="tv_query_todayout">今日出库</string>
    <string name="query_in_record">入库记录</string>
    <string name="query_materail_sn_from">原材料SN追溯</string>
    <string name="query_pro_sn_from">成品SN追溯</string>
    <string name="query_out_record">出库记录</string>
    <string name="query_in_total">入库统计</string>
    <string name="query_out_total">出库统计</string>
    <string name="qulity_inspection">品质检验</string>
    <string name="qulity_mrp_inspection">MRP评审</string>
    <string name="qulity_update_qr">条码修改</string>
    <string name="siw_storage_location_change">库位调整</string>
    <string name="siw_scan_in">扫描调入</string>
    <string name="siw_one_step_in">一步调入</string>
    <string name="siw_group_change">容器调整</string>
    <string name="siw_form_change_stock_in">形态转换-入库</string>
    <string name="siw_form_change_stock_out">形态转换-出库</string>
    <string name="siw_query_repertory">库存查询</string>
    <string name="siw_check">盘点</string>
    <string name="stock_in_point">物品清点</string>
    <string name="stock_in_point_record">清点记录</string>
    <string name="set_userinfo_num">编号：%1$s</string>
    <string name="set_userinfo_name">姓名：%1$s</string>
    <string name="set_userinfo_sex">性别：%1$s</string>
    <string name="set_userinfo_tel">手机：%1$s</string>
    <string name="set_userinfo_from">所属组织：%1$s</string>
    <string name="set_userinfo_depart">部门：%1$s</string>
    <string name="set_userinfo_root">权限组织：%1$s</string>
    <string name="login_url_tip">地址：</string>
    <string name="login_zuhu">租户：</string>
    <string name="login_language">语言：</string>
    <string name="login_set">配置服务</string>
    <string name="login_please_input_serverurl">请输入服务地址</string>
    <string name="login_please_input_right_serverurl">请输入正确地址</string>
    <string name="login_confirm_set">确认设置</string>
    <string name="login_please_input_zuhu">请输入租户信息</string>
    <string name="set_language">选择语言</string>
    <string name="set_exit">退出登录</string>
    <string name="set_update_version">版本更新</string>
    <string name="set_about">关于软件</string>
    <string name="set_update_psw">修改密码</string>
    <string name="set_device_info">设备信息</string>
    <string name="set_userinfo">用户信息</string>
    <string name="server_set">服务设置</string>
    <string name="set_team">组织切换</string>
    <string name="go_login">去登录</string>
    <string name="dialog_update_material_point">修改清点</string>
    <string name="order_no">\t订单号：%1$s</string>
    <string name="buy_date">采购日期：%1$s</string>
    <string name="buy_from">\t供应商：%1$s</string>
    <string name="buyer">\t采购员：%1$s</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="buy_num">采购数量：%1$s</string>
    <string name="send_goods_num">送货数：%1$s</string>
    <string name="have_receive_num">已收数：%1$s</string>
    <string name="point_num">清点数：</string>
    <string name="please_input_point_num">请输入请点数</string>
    <string name="spare_num">备品数：</string>
    <string name="please_input_spare_num">请输入备品数</string>
    <string name="point_record">清点记录</string>
    <string name="goods_point">物品清点</string>
    <string name="point_date">清点日期：%1$s</string>
    <string name="line_name">行号</string>
    <string name="item_buy_num">采购数</string>
    <string name="item_arrive_goods_num">到货数</string>
    <string name="item_in_stock_num">入库数</string>
    <string name="deviceinfo">设备信息</string>
    <string name="set_deviceinfo_num">设备编号：</string>
    <string name="please_input_device_num">请输入设备编号</string>
    <string name="set_deviceinfo_mac">设备MAC：%1$s</string>
    <string name="set_deviceinfo_ip">IP地址：%1$s</string>
    <string name="comfirm_set">确认设置</string>
    <string name="update_password">更改密码</string>
    <string name="update_password_oldpsw">原密码：</string>
    <string name="please_input_old_psw">请输入原密码</string>
    <string name="update_password_newpsw">新密码：</string>
    <string name="please_input_new_password">请输入新密码</string>
    <string name="upadte_password_repeat">再一次密码：</string>
    <string name="please_repeat_input_password">请再次输入新密码</string>
    <string name="show_password">显示密码</string>
    <string name="about">\t\tWMS是仓库管理系统(Warehouse Management System) 的缩写，仓库管理系统是通过入库业务、出库业务、仓库调拨、库存调拨和虚仓管理等功能，对批次管理、物料对应、库存盘点、质检管理、虚仓管理和即时库存管理等功能综合运用的管理系统，有效控制并跟踪仓库业务的物流和成本管理全过程，实现或完善的企业仓储信息管理。该系统可以独立执行库存操作，也可与其他系统的单据和凭证等结合使用，可为企业提供更为完整企业物流管理流程和财务管理信息。</string>
    <string name="confirm_logout">确认退出登录？</string>
    <string name="logout">退出登录</string>
    <string name="reset_server_will_logout">重新配置服务将退出登录</string>
    <string name="delete">删除</string>
    <string name="update">修改</string>
    <string name="item_point_buy_num">采购</string>
    <string name="item_point_arrive_num">到货</string>
    <string name="item_point_instock_num">入库</string>
    <string name="item_point_point_num">清点</string>
    <string name="item_point_spare_num">备品</string>
    <string name="point_num_and_spare_num_no_zero">请点数和备品数不能同时为0</string>
    <string name="point_num_no_more_buy_num">清点数量不能大于采购数,重新输入！</string>
    <string name="point_num_no_zero">清点数量不能为0！</string>
    <string name="header_point_date">清点时间</string>
    <string name="please_input_supplier">请输入供应商</string>
    <string name="search">搜索</string>
    <string name="stock_in_out_source">委外单</string>
    <string name="material_point_success">物料请点保存成功</string>
    <string name="point_count_no_more_send_goods_qty">请点数不能大于送货数，请重新输入！</string>
    <string name="allot_order">调拨单</string>
    <string name="check_list_title">盘点单列表</string>
    <string name="other_instock_list_title">其他入库单列表</string>
    <string name="other_outstock_list_title">其他出库单列表</string>
    <string name="sale_outstock_list_title">销售出库单列表</string>
    <string name="send_outstock_list_title">发货出库单列表</string>
    <string name="allot_orderno_list_title">调拨单列表</string>
    <string name="buy_list_title">采购单列表</string>
    <string name="out_source_list_title">委外单列表</string>
    <string name="outsource_send_material_list">委外发料单(制单)列表</string>
    <string name="outsource_send_material_audit_list">委外发料单(审核)列表</string>
    <string name="outsource_allot_list">委外调拨单列表</string>
    <string name="outsource_feed_list">委外补料单列表</string>
    <string name="outsource_return_list">委外退料单列表</string>
    <string name="production_bill_list">生产领料单列表(制单)</string>
    <string name="production_audit_list">生产领料单列表(审核)</string>
    <string name="get_material_apply_list">领料申请单列表</string>
    <string name="production_allot_list">生产调拨单列表</string>
    <string name="production_feed_list_title">生产补料单列表</string>
    <string name="production_instock_list_title">产成品入库单（审核）列表</string>
    <string name="production_instock_bill_list_title">生产任务单列表</string>
    <string name="send_goods_message_list_title">发货通知单列表</string>
    <string name="sale_out_stock_list_title">销售出库单列表</string>
    <string name="dont_query_data_please_repeat_input">未查询到数据，请重新输入！</string>
    <string name="production_return_list_title">生产退料单列表</string>
    <string name="sale_return_orderno_list_title">销售退货单列表</string>
    <string name="wait_count_num">待点总数</string>
    <string name="have_count_num">已扫总数</string>
    <string name="orderno_date">订单日期：%1$s</string>
    <string name="outsource_orderno">委外单号：%1$s</string>
    <string name="lib_name">仓库名称：%1$s</string>
    <string name="area_name">区域名称：%1$s</string>
    <string name="send_material_num">发料数量：%1$s</string>
    <string name="have_get_num">已领数量：%1$s</string>
    <string name="can_get_num">可领数量：%1$s</string>
    <string name="item_material_code">物料编码</string>
</resources>