<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/set_bg"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80px"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_orderno"
            style="@style/tv_header"
            android:text="@string/outsource_orderno"
            />

        <TextView
            android:id="@+id/tv_orderno_date"
            style="@style/tv_header"
            android:text="@string/orderno_date"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80px"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_lib_name"
            style="@style/tv_header"
            android:text="@string/lib_name"
            />

        <TextView
            android:id="@+id/tv_area_name"
            style="@style/tv_header"
            android:text="@string/area_name"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_putaway_date"
        android:layout_width="match_parent"
        android:layout_height="80px"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_have_get_num"
            style="@style/tv_header"
            android:text="@string/have_get_num"
            />

        <TextView
            android:id="@+id/tv_can_get_num"
            style="@style/tv_header"
            android:text="@string/can_get_num"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80px"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_wait_point_num"
            style="@style/tv_header"
            android:text="@string/wait_count_num"
            />

        <TextView
            android:id="@+id/tv_have_point_num"
            style="@style/tv_header"
            android:text="@string/have_count_num"
            android:visibility="visible"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80px"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_send_material_num"
            style="@style/tv_header"
            android:text="@string/send_material_num"
            />

        <TextView
            style="@style/tv_header"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/tab_txt_unselect"/>
</LinearLayout>
