<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_stock_out"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/set_bg"
    android:orientation="vertical"
    tools:context="com.timi.sz.wms_android.mvp.UI.stock_out.StockOutActivity">

    <include layout="@layout/title_head"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/stock_out"/>
            <!--委外-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100px"
                android:layout_marginBottom="2px"
                android:background="#fff">

                <TextView
                    style="@style/stock_in_title"
                    android:text="@string/stock_out_out"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="160px"
                android:layout_marginTop="2px"
                android:background="#fff"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_stock_out_out_add_materail"
                    style="@style/stock_in_tab"
                    android:drawableTop="@mipmap/stock_out_out_add_materail"
                    android:text="@string/stock_out_out_add_materail"/>

                <View
                    style="@style/LineDirection"/>

                <TextView
                    android:id="@+id/tv_stock_out_out_check"
                    style="@style/stock_in_tab"
                    android:drawableTop="@mipmap/stock_out_out_check"
                    android:text="@string/stock_out_out_check"/>

                <View
                    style="@style/LineDirection"/>

                <TextView
                    android:id="@+id/tv_stock_out_out_create_order"
                    style="@style/stock_in_tab"
                    android:drawableTop="@mipmap/stock_out_out_create_order"
                    android:text="@string/stock_out_out_create_order"/>
            </LinearLayout>
            <!--生产-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100px"
                android:layout_marginBottom="2px"
                android:layout_marginTop="2px"
                android:background="#fff">

                <TextView
                    style="@style/stock_in_title"
                    android:text="@string/stock_out_create"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="160px"
                android:layout_marginTop="2px"
                android:background="#fff"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_stock_out_create_add_materail"
                    style="@style/stock_in_tab"
                    android:drawableTop="@mipmap/stock_out_create_add_materail"
                    android:text="@string/stock_out_create_add_materail"/>

                <View
                    style="@style/LineDirection"/>

                <TextView
                    android:id="@+id/tv_stock_out_create_check"
                    style="@style/stock_in_tab"
                    android:drawableTop="@mipmap/stock_out_create_check"
                    android:text="@string/stock_out_create_check"/>

                <View
                    style="@style/LineDirection"/>

                <TextView
                    android:id="@+id/tv_stock_out_create_create_order"
                    style="@style/stock_in_tab"
                    android:drawableTop="@mipmap/stock_out_create_create_order"
                    android:text="@string/stock_out_create_create_order"/>
            </LinearLayout>
            <!--销售-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100px"
                android:layout_marginBottom="2px"
                android:layout_marginTop="2px"
                android:background="#fff">

                <TextView
                    style="@style/stock_in_title"
                    android:text="@string/stock_out_sale"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="160px"
                android:layout_marginTop="2px"
                android:background="#fff"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_stock_out_sale_trans"
                    style="@style/stock_in_tab"
                    android:drawableTop="@mipmap/stock_out_sale_trans"
                    android:text="@string/stock_out_sale_trans"/>

                <View
                    style="@style/LineDirection"/>

                <TextView
                    android:id="@+id/tv_stock_out_sale_check"
                    style="@style/stock_in_tab"
                    android:drawableTop="@mipmap/stock_out_sale_check"
                    android:text="@string/stock_out_sale_check"/>

                <View
                    style="@style/LineDirection"/>

                <TextView
                    android:id="@+id/tv_stock_out_sale_create_order"
                    style="@style/stock_in_tab"
                    android:drawableTop="@mipmap/stock_out_sale_create_order"
                    android:text="@string/stock_out_sale_create_order"/>
            </LinearLayout>
            <!--其他-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100px"
                android:layout_marginBottom="2px"
                android:layout_marginTop="2px"
                android:background="#fff">

                <TextView
                    style="@style/stock_in_title"
                    android:text="@string/stock_out_other"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="160px"
                android:layout_marginTop="2px"
                android:background="#fff"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_stock_out_other_buy_return"
                    style="@style/stock_in_tab"
                    android:drawableTop="@mipmap/stock_out_other_buy_return"
                    android:text="@string/stock_out_other_buy_return"/>

                <View
                    style="@style/LineDirection"/>

                <TextView
                    android:id="@+id/tv_stock_out_other_check"
                    style="@style/stock_in_tab"
                    android:drawableTop="@mipmap/stock_out_other_check"
                    android:text="@string/stock_out_other_check"/>

                <View
                    style="@style/LineDirection"/>

                <TextView
                    android:id="@+id/tv_stock_out_other_create_order"
                    style="@style/stock_in_tab"
                    android:drawableTop="@mipmap/stock_out_other_create_order"
                    android:text="@string/stock_out_other_create_order"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100px"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
