<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/white"
              android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/ll_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/head"
        android:orientation="horizontal"
        android:paddingLeft="10px"
        android:paddingRight="10px">

        <TextView
            android:id="@+id/tv_line_num"
            android:layout_width="110px"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/line_name"
            android:textColor="#333"
            android:textSize="13sp"
            />

        <TextView
            android:id="@+id/tv_material_code"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="left"
            android:text="@string/item_material_code"
            android:textColor="#333"
            android:textSize="13sp"/>

        <TextView
            android:id="@+id/tv_point_num"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/item_point_point_num"

            android:textColor="#333"
            android:textSize="13sp"/>


        <TextView
            android:id="@+id/tv_spare_num"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/item_point_spare_num"
            android:textColor="#333"
            android:textSize="13sp"/>

        <TextView
            android:id="@+id/tv_arrive_good_num"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/item_point_buy_num"
            android:textColor="#333"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/tv_buy_num"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/item_point_arrive_num"
            android:textColor="#333"
            android:textSize="13sp"/>

        <TextView
            android:id="@+id/tv_instock_num"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/item_point_instock_num"
            android:textColor="#333"
            android:textSize="13sp"/>


    </LinearLayout>

</LinearLayout>
